k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-tracker
  labels:
    app: deployment-tracker
spec:
  replicas: 2

  selector:
    matchLabels:
      app: deployment-tracker

  template:
    metadata:
      labels:
        app: deployment-tracker

    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret

      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: deployment-tracker

          image: ghcr.io/iiismailtriki/deployment-tracker@sha256:bf548c5f35dbcf04407da0787b224c3aa3838a3c6486a971714fe83d020e23d5

          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
