k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-tracker
spec:
  type: ClusterIP

  selector:
    app: deployment-tracker

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
