k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deployment-tracker-ingress
spec:
  podSelector:
    matchLabels:
      app: deployment-tracker

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: deployment-tracker

      ports:
        - protocol: TCP
          port: 8000
